[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rhreports"
version = '0.2'
description = "Report generation tool"
authors = [{name = "U. Lindberg", email = "ulrich.lindberg@regionh.dk"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
lint = ["flake8"]
test = ["pytest", "mypy"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rhreports"]

[tool.flake8]
max-line-length = 99
